@@ -1,3 +1,8 @@
+2011-09-02  François Dumont  <fdumont@gcc.gnu.org>
+
+	* testsuite/util/testsuite_allocator.h (tracker_allocator_counter::
+	allocate): Update allocation count only if allocation succeeded.
+
 2011-09-02  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/std/bitset: Trivial formatting fixes.
